@@ -810,11 +810,13 @@ typedef U64  (*z900_trace_br_func) (int amode,  U64 ia, REGS *regs);
     INITIALIZE_NLS(); \
     INITIALIZE_EXTERNAL_GUI(); \
     memset (&sysblk, 0, sizeof(SYSBLK)); \
+    sysblk.arch_mode = 4095; \
     INIT_MSGLCK \
     initialize_detach_attr (DETACHED); \
     initialize_join_attr   (JOINABLE); \
     set_codepage(NULL); \
     init_hostinfo( &hostinfo ); \
+    if ( get_symbol( "HERCULES_UTIL_MSGLVL" ) != NULL ) sysblk.msglvl = MLVL_ANY;\
   } while (0)
 
 /*-------------------------------------------------------------------*/
